DFfullcopybackup/force-app/main/default/objects/APTS_AllCost__c/APTS_AllCost__c.object-meta.xml
<CustomObject>
    <description>Custom object to consolidate all contractual costs and material costs from SAP table for quoting</description>
    <label>All Cost</label>
    <nameField>
        <displayFormat>CST-{00000}</displayFormat>
        <label>Cost ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>All Costs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>