DFfullcopybackup/force-app/main/default/objects/APTS_AllCost__c/fields/APTS_Cost__c.field-meta.xml
<CustomField>
    <fullName>APTS_Cost__c</fullName>
    <description>Contractual cost or material cost value from SAP</description>
    <inlineHelpText>Contractual cost or material cost value from SAP</inlineHelpText>
    <label>Cost</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>