DFfullcopybackup/force-app/main/default/objects/APTS_AllCost__c/fields/APTS_Cost_Calculation_Sequence__c.field-meta.xml
<CustomField>
    <fullName>APTS_Cost_Calculation_Sequence__c</fullName>
    <formula>IF( AND(
NOT ISBLANK(APTS_Sold_To_Account__c),
NOT ISBLANK(APTS_Material_Number__c),
NOT ISBLANK(APTS_Cost__c),
NOT ISBLANK(APTS_Valid_From_Date__c),
NOT ISBLANK(APTS_Valid_Until_Date__c),
NOT(APTS_Invalid__c))
,1,

IF( AND(
ISBLANK(APTS_Sold_To_Account__c),
NOT ISBLANK(APTS_Material_Number__c),
NOT ISBLANK(APTS_Cost__c),
NOT ISBLANK(APTS_Valid_From_Date__c),
NOT ISBLANK(APTS_Valid_Until_Date__c),
NOT(APTS_Invalid__c))
,2,0

))</formula>
    <label>Cost Calculation Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>