DFfullcopybackup/force-app/main/default/objects/APTS_AllCost__c/fields/APTS_Invalid__c.field-meta.xml
<CustomField>
    <fullName>APTS_Invalid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if setup data is in error</description>
    <inlineHelpText>True if setup data is in error</inlineHelpText>
    <label>Invalid</label>
    <type>Checkbox</type>
</CustomField>