DFfullcopybackup/force-app/main/default/objects/APTS_AllCost__c/fields/APTS_Material_Number__c.field-meta.xml
<CustomField>
    <fullName>APTS_Material_Number__c</fullName>
    <description>Material Number of the Product sourced from SAP</description>
    <inlineHelpText>Material Number of the Product sourced from SAP</inlineHelpText>
    <label>Material Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>