DFfullcopybackup/force-app/main/default/objects/APTS_AllCost__c/fields/APTS_PriceList__c.field-meta.xml
<CustomField>
    <fullName>APTS_PriceList__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the Price List object to capture price list</description>
    <inlineHelpText>Reference to the Price List object to capture price list</inlineHelpText>
    <label>Price List</label>
    <referenceTo>Apttus_Config2__PriceList__c</referenceTo>
    <relationshipLabel>All Costs</relationshipLabel>
    <relationshipName>All_Costs</relationshipName>
    <type>Lookup</type>
</CustomField>