DFfullcopybackup/force-app/main/default/objects/APTS_AllCost__c/fields/APTS_Pricing_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>APTS_Pricing_Type_Code__c</fullName>
    <description>Pricing Type Code from SAP table - KONP</description>
    <inlineHelpText>Pricing Type Code from SAP table - KONP</inlineHelpText>
    <label>Pricing Type Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>