DFfullcopybackup/force-app/main/default/objects/APTS_AllCost__c/fields/APTS_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>APTS_Product_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the Product object to capture Product record</description>
    <inlineHelpText>Reference to the Product object to capture Product record</inlineHelpText>
    <label>Product Name</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>All Costs</relationshipLabel>
    <relationshipName>All_Costs</relationshipName>
    <type>Lookup</type>
</CustomField>