DFfullcopybackup/force-app/main/default/objects/APTS_AllCost__c/fields/APTS_Source_Business_Object__c.field-meta.xml
<CustomField>
    <fullName>APTS_Source_Business_Object__c</fullName>
    <description>API name of the SAP source Table name for this record</description>
    <inlineHelpText>API name of the SAP source Table name for this record</inlineHelpText>
    <label>Source Business Object</label>
    <length>100</length>
    <type>Text</type>
</CustomField>