DFfullcopybackup/force-app/main/default/objects/APTS_AllCost__c/fields/APTS_Valid_From_Date__c.field-meta.xml
<CustomField>
    <fullName>APTS_Valid_From_Date__c</fullName>
    <description>Valid From Date for the Contractual/Material Cost</description>
    <inlineHelpText>Valid From Date for the Contractual/Material Cost</inlineHelpText>
    <label>Valid From Date</label>
    <type>Date</type>
</CustomField>