DFfullcopybackup/force-app/main/default/objects/APTS_AllCost__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>APTS_Sold_To_Account__c</columns>
    <columns>APTS_Product_Name__c</columns>
    <columns>APTS_Cost__c</columns>
    <columns>APTS_Valid_From_Date__c</columns>
    <columns>APTS_Valid_Until_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>